--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+@import '~@swimlane/ngx-datatable/release/index.css';
+@import '~@swimlane/ngx-datatable/release/themes/material.css';
+@import '~@swimlane/ngx-datatable/release/assets/icons.css';
+
 /* You can add global styles to this file, and also import other style files */
 body {
   background-color: #f8f8f8;
