--- a/src/app/ng2-smart-table-example/ng2-smart-table-example.component.html
+++ b/src/app/ng2-smart-table-example/ng2-smart-table-example.component.html
@@ -1,1 +1,6 @@
-<ng2-smart-table [settings]="settings" [source]="rows"></ng2-smart-table>
+<ng2-smart-table [settings]="settings"
+                 [source]="rows"
+                 (deleteConfirm)="onDeleteConfirm($event)"
+                 (editConfirm)="onSaveConfirm($event)"
+                 (createConfirm)="onCreateConfirm($event)">
+</ng2-smart-table>
