--- a/src/app/ng2-smart-table-example/ng2-smart-table-example.component.html
+++ b/src/app/ng2-smart-table-example/ng2-smart-table-example.component.html
@@ -1,6 +1,9 @@
 <ng2-smart-table [settings]="settings"
-                 [source]="rows"
+                 [source]="source"
                  (deleteConfirm)="onDeleteConfirm($event)"
                  (editConfirm)="onSaveConfirm($event)"
-                 (createConfirm)="onCreateConfirm($event)">
+                 (createConfirm)="onCreateConfirm($event)"
+                 (rowSelect)="rowSelect($event)">
 </ng2-smart-table>
+
+<button (click)="loadData()">Load new data</button>
