Removed unnecessary files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,6 @@ Material Design Lite components:
 
 <app-ui-top-navigation></app-ui-top-navigation>
 
-<app-ui-sub-navigation [title]="(observable$ | async)?.title" [description]="(observable$ | async)?.text"></app-ui-sub-navigation>
-
 <div class="main">
   <router-outlet></router-outlet>
-</div>gi
-
-<router-outlet name='modal'></router-outlet>
+</div>
