--- a/client/app/profile/profile.component.html
+++ b/client/app/profile/profile.component.html
@@ -2,6 +2,6 @@
 
 <ul>
   <li>{{(user$ | async)?.name}}</li>
-  <li>{{(user$ | async)?.username}}</li>
   <li>{{(user$ | async)?.email}}</li>
+  <li>{{(user$ | async)?.role}}</li>
 </ul>
