--- a/client/app/ng2-smart-table-example/ng2-smart-table-example.component.html
+++ b/client/app/ng2-smart-table-example/ng2-smart-table-example.component.html
@@ -1,3 +1,5 @@
+<h2>Smart Table</h2>
+
 <ng2-smart-table [settings]="settings"
                  [source]="source"
                  (deleteConfirm)="onDeleteConfirm($event)"
