Ngx Datatables using server school data

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -14,9 +14,9 @@
       <mdl-layout-title>Pearson</mdl-layout-title>
       <nav class="mdl-navigation">
         <a routerLink="/profile" routerLinkActive="active" class="mdl-navigation__link" >Profile</a>
-        <a routerLink="/schools" routerLinkActive="active" class="mdl-navigation__link" >Schools (Ngx Datatable)</a>
-        <a routerLink="/smart-table" routerLinkActive="active" class="mdl-navigation__link" >Smart Table</a>
         <a routerLink="/mdl-table" routerLinkActive="active" class="mdl-navigation__link" >Mdl Table</a>
+        <a routerLink="/smart-table" routerLinkActive="active" class="mdl-navigation__link" >Smart Table</a>
+        <a routerLink="/ngx-datatable" routerLinkActive="active" class="mdl-navigation__link" >Ngx Datatable</a>
       </nav>
     </mdl-layout-drawer>
     <mdl-layout-content>
