--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -17,6 +17,9 @@
         <a routerLink="/mdl-table" routerLinkActive="active" class="mdl-navigation__link" >Mdl Table</a>
         <a routerLink="/smart-table" routerLinkActive="active" class="mdl-navigation__link" >Smart Table</a>
         <a routerLink="/ngx-datatable" routerLinkActive="active" class="mdl-navigation__link" >Ngx Datatable</a>
+        <a routerLink="/angular-generic-table" routerLinkActive="active" class="mdl-navigation__link" >Angular Generic Table</a>
+        <a routerLink="/ng-md-datatable" routerLinkActive="active" class="mdl-navigation__link" >Ng Md Datatable</a>
+        <a routerLink="/right-angled" routerLinkActive="active" class="mdl-navigation__link" >Right Angled</a>
       </nav>
     </mdl-layout-drawer>
     <mdl-layout-content>
