--- a/client/styles.scss
+++ b/client/styles.scss
@@ -1,4 +1,6 @@
 @import '~@angular-mdl/core/scss/material-design-lite';
+
+// ngx-datatable
 @import '~@swimlane/ngx-datatable/release/index.css';
 @import '~@swimlane/ngx-datatable/release/themes/material.css';
 @import '~@swimlane/ngx-datatable/release/assets/icons.css';
@@ -13,4 +15,24 @@
 
 .css-class-blue {
   color: #000088 !important;
+}
+
+// ng2-md-datatable
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '~ng2-md-datatable/datatable-theme';
+
+
+// right-angled
+app-right-angled-example .mdl-data-table {
+  .rt-sort-asc {
+    background: #eeffbb;
+  }
+
+  .rt-sort-desc {
+    background: #ffbbee;
+  }
+
+  tfoot td {
+    text-align: left;
+  }
 }
