--- a/client/app/angular-generic-table-example/angular-generic-table-example.component.html
+++ b/client/app/angular-generic-table-example/angular-generic-table-example.component.html
@@ -6,3 +6,5 @@
 <div class="text-center">
   <gt-pagination [gtClasses]="'mdl-button'" [genericTable]="myTable"></gt-pagination>
 </div>
+
+<a href="https://hjalmers.github.io/angular-generic-table/advanced">Example</a>
