--- a/client/app/ng2-smart-table-example/ng2-smart-table-example.component.html
+++ b/client/app/ng2-smart-table-example/ng2-smart-table-example.component.html
@@ -9,3 +9,5 @@
 </ng2-smart-table>
 
 <button (click)="loadData()">Load new data</button>
+
+<a href="https://akveo.github.io/ng2-smart-table/#/">Example</a>
