--- a/client/app/profile/profile.component.html
+++ b/client/app/profile/profile.component.html
@@ -4,4 +4,5 @@
   <li>{{(user$ | async)?.name}}</li>
   <li>{{(user$ | async)?.email}}</li>
   <li>{{(user$ | async)?.role}}</li>
+  <li>{{(user$ | async)?.id}}</li>
 </ul>
