Use pef-ui-bootstrap

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -10,8 +10,10 @@
         </nav>
       </mdl-layout-header-row>
     </mdl-layout-header>
-    <mdl-layout-drawer>
-      <mdl-layout-title>Pearson</mdl-layout-title>
+    <mdl-layout-drawer class="side-panel">
+      <mdl-layout-title>
+        <img src="./assets/logo_pearson.svg" alt="Pearson logo" class="logo-pearson" />
+      </mdl-layout-title>
       <nav class="mdl-navigation">
         <a routerLink="/profile" routerLinkActive="active" class="mdl-navigation__link" >Profile</a>
         <a routerLink="/schools" routerLinkActive="active" class="mdl-navigation__link" >Schools</a>
