--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,5 +1,20 @@
 @import '~@angular-mdl/core/scss/material-design-lite';
+@import '~pef-ui-strap/dist/scss/patterns/quarks/colorPalette';
 
-.main {
-  padding: 0 20px;
+.demo-container {
+  .side-panel {
+    .logo-pearson {
+      width: 80%;
+    }
+  }
+
+  .main {
+    padding: 0 20px;
+  }
+
+  .mdl-layout {
+    .mdl-layout__header-row {
+      background-color: $pe-brand-color-blue;
+    }
+  }
 }
